# Clasificador-De-Gatos

./: .gitignore  INSTALACION.md  PROBLEMAS_COMUNES.md  README.md  main.py  pyproject.toml  requirements.txt
src/common/: data_utils.py
src/interface/: __init__.py  app.py
src/predict/: __init__.py  predict_service.py
src/train/: __init__.py  train_service.py
